# rules_scala

./: WORKSPACE  repositories.bzl  setup.bzl  version.bzl
gazelle/: BUILD.bazel  Resolver.scala  configure.go  defs.bzl  deps.bzl  fix.go  generate.go  kinds.go  language.go  parser.go  resolve.go  target.go
gazelle/scalaconfig/: BUILD.bazel  scalaconfig.go  types.go
