load("@bazel_gazelle//:def.bzl", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
# load("@rules_python//python:defs.bzl", "py_binary")

go_library(
    name = "gazelle",
    srcs = [
        "generate.go",
        "configure.go",
        "language.go",
        "kinds.go",
        "resolve.go",
        "fix.go",
    ],
    importpath = "github.com/bazelbuild/rules_scala/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

gazelle_binary(
    name = "gazelle_scala_binary",
    languages = ["//gazelle"],
    visibility = ["//visibility:public"],
)