load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "scalaconfig",
    srcs = [
        "scalaconfig.go",
        "types.go",
    ],
    importpath = "github.com/bazelbuild/rules_scala/gazelle/scalaconfig",
    visibility = ["//visibility:public"],
    deps = [
        # "//gazelle/manifest",
        "@bazel_gazelle//label:go_default_library",
    ],
)
